--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,35 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@keyframes gradient-move {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
+  }
+  
+  .animate-text {
+    background-size: 200% 200%;
+    animation: gradient-move 3s ease infinite;
+  }
+  @keyframes gradient-line {
+    0% {
+      width: 0;
+    }
+    50% {
+      width: 50%;
+    }
+    100% {
+      width: 100%;
+    }
+  }
+  
+  .animate-line {
+    animation: gradient-line 2s ease-out forwards;
+  }
+    
